fixed some event listerns, spacing on buttons for the questions sidebar

--- a/frontend/src/components/100_layout/10_header/NavBar.module.css
+++ b/frontend/src/components/100_layout/10_header/NavBar.module.css
@@ -177,7 +177,7 @@ button:focus {
 	overflow: hidden;
 }
 .searchContainer.open:hover {
-	background-color: #26282a !important;
+	background-color: var(--hover_backgroundColor_SearchBar_offBlack_to_offWhite) !important;
 }
 /* Search Button------------------------------------------------------*/
 .searchButton {
