--- a/frontend/src/components/400_demos/10_demo_DMV_ClassC/0_features/pagination/paginationGUI.module.css
+++ b/frontend/src/components/400_demos/10_demo_DMV_ClassC/0_features/pagination/paginationGUI.module.css
@@ -8,7 +8,7 @@
 	border-radius: 10px;
 	width: 200px;
 	align-items: center;
-	margin: auto auto 10px auto;
+	margin: 10px auto 10px auto;
 	font-size: 16px !important;
 }
 /* Pagination Controls 1 of 4-------------------------------------------------*/
